--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,47 @@
 *{
     font-family: "Crimson Text", serif;
+    background-color: whitesmoke;
+}
+
+
+header,footer{
+    background-color:#873436 ;
+}
+
+#div{
+
+    background-color:#873436 ;
+  }
+
+#div,img{
+
+    border: 5px;
+  border-color: black;
+  width: 100%;
+  height: 30%;
+ 
+
+}
+
+#i1{
+    background-color:#901215 ;
+
+}
+
+#i2{
+
+    background-color:#014a71 ;
+}
+#i3{
+    background-color:#1e7553 ;
+}
+#i4{
+    background-color:#f5aa2b ;
+    
+}
+
+h3{
+    color:#ffffff ;
 }
 
 /* 
